# embedded-cal

./: .gitignore  .mailmap  ALGORITHMS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  metadata.yml  no-squash-fixup.yml
ariel-tests/: Cargo.toml  README.md  laze-project.yml
ariel-tests/src/: configured_cal.rs  main.rs
embedded-cal/: Cargo.toml
embedded-cal-core/: Cargo.toml
embedded-cal-core/src/: hash.rs  lib.rs
embedded-cal-core/src/plumbing/: mod.rs
embedded-cal-libcrux/: Cargo.toml
embedded-cal-libcrux/src/: aead.rs  empty_impls.rs  hash.rs  lib.rs
embedded-cal-nrf54l15/: Cargo.toml  build.rs  memory.x
embedded-cal-nrf54l15/.cargo/: config.toml
embedded-cal-nrf54l15/src/: aead.rs  descriptor.rs  dh.rs  dh_plumbing.rs  empty_impls.rs  inner.rs  lib.rs  microcode.rs  sha2.rs  sha3.rs  try_rng.rs
embedded-cal-nrf54l15/src/microcode/: data.rs
embedded-cal-nrf54l15/tests/: integration.rs
embedded-cal-rustcrypto/: Cargo.toml
embedded-cal-rustcrypto/src/: dh.rs  hmac.rs  lib.rs  rng.rs
embedded-cal-software/: Cargo.toml  README.md
embedded-cal-software-demo/: Cargo.toml  README.md
embedded-cal-software-demo/src/: dh.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  rng.rs
embedded-cal-software-demo/src/tests/: dummy_sha256.rs
embedded-cal-software-demo/src/tests/dummy_sha256/: empty_impls.rs
embedded-cal-software/src/: aead.rs  lib.rs
embedded-cal-software/src/tests/: dummy_sha256.rs
embedded-cal-software/src/tests/dummy_sha256/: empty_impls.rs
embedded-cal-stm32wba55/: Cargo.toml  build.rs  device.x  memory.x
embedded-cal-stm32wba55/.cargo/: config.toml
embedded-cal-stm32wba55/src/: aead.rs  dh.rs  dh_plumbing.rs  empty_impls.rs  inner.rs  lib.rs  try_rng.rs
embedded-cal-stm32wba55/tests/: integration.rs
embedded-cal/src/: aead.rs  dh.rs  empty.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  p256.rs  rng.rs
embedded-cal/src/plumbing/: ec.rs  mod.rs
embedded-cal/src/plumbing/hash/: mod.rs  sha2short.rs
examples/nrf54l15/: Cargo.toml  memory.x
examples/nrf54l15/.cargo/: config.toml
examples/nrf54l15/src/: main.rs
examples/stm32wba55cg/: Cargo.toml  build.rs
examples/stm32wba55cg/.cargo/: config.toml
examples/stm32wba55cg/src/: main.rs
helpers/: grep-algorithms.sh
helpers/ALGORITHMS.cache/: README.md  REUSE.toml  enum-algorithm-items  plumbing  providers
testvectors/: Cargo.toml
testvectors/src/: aead.rs  dh.rs  lib.rs  sha3.rs  tv.rs
testvectors/src/aead/: aes_ccm.rs  aes_gcm.rs
