[workspace]
members = ["embedded-cal", "embedded-cal-rustcrypto", "testvectors"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/lake-rs/embedded-cal.git"
keywords = ["iot", "security", "crypto", "embedded"]
categories = ["cryptography", "hardware-support", "embedded", "no-std::no-alloc"]
version = "0.1.0"

[workspace.dependencies]
hax-lib.git = "https://github.com/hacspec/hax"
