[package]
name = "embedded-cal-core"
description = "A Cryptographic Abstraction Layer (CAL) for embedded systems — core traits"

license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
hax-lib.workspace = true
