# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Inria-AIO, Cryspen, and Christian Amsüss

[package]
name = "embedded-cal-libcrux"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
embedded-cal.path = "../embedded-cal"
libcrux-sha2 = "0.0.7"
libcrux-iot-aes = { git = "https://github.com/celabshq/libcrux-iot", rev = "d62904ee7c023b9758eeb0a736af5afc1c5cd16d" }
libcrux-traits = { version = "0.0.7", features = ["error-in-core"] }
rand_core = "0.10"

[dev-dependencies]
testvectors.path = "../testvectors"
