# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: Inria-AIO, Cryspen, and Christian Amsüss

[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
name = "embedded-cal-libcrux"
readme.workspace = true
repository.workspace = true
version.workspace = true

# Due to libcrux-iot being AGPL-3.0
license = "AGPL-3.0-only"

[dependencies]
embedded-cal.path = "../embedded-cal"
# depends on unmerged changes of https://github.com/celabshq/libcrux-iot/pull/180
libcrux-iot-aes = { git = "https://github.com/celabshq/libcrux-iot", rev = "d62904ee7c023b9758eeb0a736af5afc1c5cd16d" }
libcrux-secrets = { version = "0.0.5" }
libcrux-sha2 = "0.0.7"
libcrux-traits = { version = "0.0.7", features = ["error-in-core"] }
rand_core = "0.10"

[dev-dependencies]
testvectors.path = "../testvectors"
