# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: Inria-AIO, Cryspen, and Christian Amsüss

[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
name = "embedded-cal-libcrux"
readme.workspace = true
repository.workspace = true
version.workspace = true

# Due to libcrux-iot being AGPL-3.0
license = "AGPL-3.0-only"

[features]
# The check-secret-independence feature can be used as a lightweight check that secrets are not used
# in a way that depends on their values. This is achieved with the https://docs.rs/libcrux-secrets crate
# which provides type-aliases that either point to the normal rust integers, or to specially restricted
# new-types if the feature is enabled. This feature should only be activated locally or in CI to check
# for secret independence, and not when depending on the embedded-cal-libcrux crate.
check-secret-independence = ["libcrux-secrets/check-secret-independence", "libcrux-iot-sha3/check-secret-independence"]

[dependencies]
embedded-cal.path = "../embedded-cal"
# depends on unmerged changes of https://github.com/celabshq/libcrux-iot/pull/180
libcrux-iot-aes = { git = "https://github.com/celabshq/libcrux-iot", rev = "d62904ee7c023b9758eeb0a736af5afc1c5cd16d" }
libcrux-iot-sha3 = { git = "https://github.com/celabshq/libcrux-iot.git", rev = "54e2681a39f5d4d79ab5465f2c2341f267ff6ec1" }
libcrux-secrets = { version = "0.0.5" }
libcrux-sha2 = "0.0.7"
libcrux-traits = { version = "0.0.7", features = ["error-in-core"] }
rand_core = "0.10"

[dev-dependencies]
testvectors.path = "../testvectors"
