[package]
name = "embedded-cal-nrf54l15"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
test = false
doc = false

[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-cal.path = "../embedded-cal"
testvectors.path = "../testvectors"
nrf54l15-app-pac = { git = "https://github.com/WilliamTakeshi/nrf54l15-app-pac", version = "0.1.0", features = ["critical-section", "rt"] }

[dev-dependencies]
defmt-test = "0.4"
