# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Inria-AIO, Cryspen, and Christian Amsüss

[package]
name = "embedded-cal-software-demo"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
embedded-cal = { version = "0.1.0", path = "../embedded-cal" }
rand_core.workspace = true

[dev-dependencies]
testvectors.path = "../testvectors"
