[package]
name = "embedded-cal-software"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
embedded-cal-core = { version = "0.1.0", path = "../embedded-cal-core" }

[dev-dependencies]
testvectors.path = "../testvectors"
