# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Inria-AIO, Cryspen, and Christian Amsüss

[package]
name = "embedded-cal-stm32wba55"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
# While the crate is already excluded from the workspace's defaults, setting
# this also means that when `cargo test` is run in here, cargo reaches into the
# local .cargo that sets up target and runner.
test = false

[[test]]
name = "integration"
harness = false

[dependencies]
embedded-cal.path = "../embedded-cal"
stm32-metapac = { version = "18.0", features = ["stm32wba55cg", "rt"] }
rand_core.workspace = true

[dev-dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt = "1.0"
defmt-rtt = "1.0"
defmt-test = "0.4"
embedded-cal-software-demo.path = "../embedded-cal-software-demo"
panic-probe = { version = "1.0", features = ["print-defmt"] }
testvectors.path = "../testvectors"
