[package]
name = "embedded-cal"
description = "A Cryptographic Abstraction Layer (CAL) for embedded systems"

license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
hax.workspace = true
