# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Inria-AIO, Cryspen, and Christian Amsüss

[package]
name = "embedded-cal"
description = "A Cryptographic Abstraction Layer (CAL) for embedded systems"

license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
hax-lib.workspace = true
rand_core.workspace = true
